[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/ui_control/PlaceHoder_item.tscn" type="PackedScene" id=1]
[ext_resource path="res://script/ProgramList.gd" type="Script" id=2]
[ext_resource path="res://assets/vector/control_icons/normal/delete.png" type="Texture" id=3]
[ext_resource path="res://assets/vector/control_icons/normal/clean_icon.png" type="Texture" id=4]
[ext_resource path="res://assets/vector/control_icons/pressed/clean_icon.png" type="Texture" id=5]
[ext_resource path="res://assets/vector/control_icons/hoover/delete_icon.png" type="Texture" id=6]
[ext_resource path="res://assets/vector/control_icons/pressed/delete_icon.png" type="Texture" id=7]
[ext_resource path="res://assets/vector/control_icons/hoover/clean_icon.png" type="Texture" id=8]
[ext_resource path="res://assets/vector/control_icons/pressed/setup_icon.png" type="Texture" id=9]
[ext_resource path="res://assets/vector/control_icons/normal/setup.png" type="Texture" id=10]
[ext_resource path="res://assets/vector/control_icons/hoover/setup_icon.png" type="Texture" id=11]

[node name="MarginContainer" type="MarginContainer"]
anchor_right = 1.0
margin_right = -6.0
margin_bottom = 66.0
rect_min_size = Vector2( 300, 0 )
script = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 1018.0
margin_bottom = 66.0

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer"]
margin_right = 792.0
margin_bottom = 66.0
rect_min_size = Vector2( 792, 0 )
follow_focus = true
scroll_vertical_enabled = false

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/ScrollContainer"]
margin_right = 792.0
margin_bottom = 66.0
rect_min_size = Vector2( 792, 0 )

[node name="TextureRect" parent="HBoxContainer/ScrollContainer/HBoxContainer" instance=ExtResource( 1 )]
margin_right = 66.0
margin_bottom = 66.0

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 796.0
margin_right = 808.0
margin_bottom = 66.0
size_flags_horizontal = 3

[node name="CleanButton" type="TextureButton" parent="HBoxContainer"]
margin_left = 812.0
margin_right = 878.0
margin_bottom = 66.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 8 )

[node name="DeleteButton" type="TextureButton" parent="HBoxContainer"]
margin_left = 882.0
margin_right = 948.0
margin_bottom = 66.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 6 )

[node name="SetupButton" type="TextureButton" parent="HBoxContainer"]
margin_left = 952.0
margin_right = 1018.0
margin_bottom = 66.0
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 11 )

[connection signal="child_entered_tree" from="HBoxContainer/ScrollContainer/HBoxContainer" to="." method="_on_HBoxContainer_child_entered_tree"]
[connection signal="pressed" from="HBoxContainer/CleanButton" to="." method="_on_CleanButton_pressed"]
[connection signal="pressed" from="HBoxContainer/DeleteButton" to="." method="_on_DeleteButton_pressed"]
[connection signal="pressed" from="HBoxContainer/SetupButton" to="." method="_on_SetupButton_pressed"]
